--- a/index.html
+++ b/index.html
@@ -1,54 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>PWA - Vanilla JS</title>
-    <link rel="manifest" href="manifest.json">
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,700"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css"
-    />
-    <link rel="stylesheet" href="assets/style.css">
-    <script defer src="assets/js/material.min.js"></script>
-    <script src="app.js" type="module"></script>
-  </head>
-  <body>
-    <div id="app">
-      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header">
-          <div class="mdl-layout__header-row">
-            <!-- Title -->
-            <span class="mdl-layout-title">PWA - Vanilla JS</span>
-          </div>
-        </header>
-        <div class="mdl-layout__drawer">
-          <span class="mdl-layout-title">PWA - Vanilla JS</span>
-          <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="/">About</a>
-          </nav>
-        </div>
-        <main
-          class="mdl-layout__content mat-typography"
-          style="text-align: center"
-        >
-          <p id="output">
-            <img src="assets/images/pwa-logo.png" alt="">
-          </p>
-        </main>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>PWA - To-Do List</title>
+  <link rel="manifest" href="manifest.json">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css" />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="assets/style.css">
+  <script defer src="assets/js/material.min.js"></script>
+  <script src="app.js" type="module"></script>
+</head>
+
+<body>
+  <div class="to-do">
+    <div class="header">
+      <p>To-Do list</p>
+      <button><i class="bx bxs-trash-alt"></i></button>
     </div>
-  </body>
+    <hr />
+    <br />
+    <div class="divInsert">
+      <input type="text" class="textInsert" />
+      <button><i class="bx bx-plus"></i></button>
+    </div>
+    <ul></ul>
+</body>
+
 </html>
