add index.js with CRUD functions saving localStorage, in a future commit it is going be added IndexedDB to save data instead

--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
 <body>
   <div class="to-do">
     <div class="header">
-      <p>To-Do list</p>
-      <button><i class="bx bxs-trash-alt"></i></button>
+      <p>To-Do List</p>
+      <button><i class='bx bxs-trash-alt'></i></button>
     </div>
-    <hr />
+    <hr/>
     <br />
     <div class="divInsert">
-      <input type="text" class="textInsert" />
-      <button><i class="bx bx-plus"></i></button>
+      <input class="textInsert" type="text" />
+      <button><i class='bx bx-plus'></i></button>
     </div>
     <ul></ul>
+  </div>
+  
+  <script src="index.js"></script>
 </body>
 
 </html>
