add function to read and write in indexeddb

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul></ul>
   </div>
   
-  <script src="index.js"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
